@@ -174,6 +174,13 @@ class TestMailbox(TestBase):
         self.assertEqual(self._box.get_file(key1).read().replace(os.linesep, '\n'),
                          _sample_message)
 
+    def test_get_file_can_be_closed_twice(self):
+        # Issue 11700
+        key = self._box.add(_sample_message)
+        f = self._box.get_file(key)
+        f.close()
+        f.close()
+
     def test_iterkeys(self):
         # Get keys using iterkeys()
         self._check_iteration(self._box.iterkeys, do_keys=True, do_values=False)
@@ -1670,7 +1677,8 @@ class TestProxyFileBase(TestBase):
     def _test_close(self, proxy):
         # Close a file
         proxy.close()
-        self.assertRaises(AttributeError, lambda: proxy.close())
+        # Issue 11700 subsequent closes should be a no-op, not an error.
+        proxy.close()
 
 
 class TestProxyFile(TestProxyFileBase):
